@@ -1,4 +1,4 @@
-; $Id: views.info,v 1.7.6.24 2010-05-24 16:40:25 dereine Exp $
+; $Id: views.info,v 1.7.6.25 2010-05-24 17:13:31 dereine Exp $
 name = Views
 description = Create customized lists and queries from your database.
 package = Views
@@ -22,6 +22,7 @@ files[] = handlers/views_handler_field_group_by_numeric.inc
 files[] = handlers/views_handler_field_boolean.inc
 files[] = handlers/views_handler_field_boolean.test
 files[] = handlers/views_handler_field_custom.inc
+files[] = handlers/views_handler_field_custom.test
 files[] = handlers/views_handler_field_date.inc
 files[] = handlers/views_handler_field_markup.inc
 files[] = handlers/views_handler_field_numeric.inc
